# simplevault

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-all.sh  check-version.sh  config.json  docker-compose.db-test.yml  install.sh  justfile  publish-all.sh  run-all-tests.sh  run-db-query-tests.sh
.cursor/rules/: src-client-contract-sync.mdc  src-docs-sync.mdc
client/: README.md  package-lock.json  package.json
client/src/: cli.ts  client.ts  config.ts  crypto.ts  index.ts  server.ts
client/test/: config.json  config.runtime.16797.json  contract.mjs  run-with-dev-server.mjs  run-with-rust-server.mjs
docker/: entrypoint.sh
docs/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.worker.json  wrangler.jsonc
docs/src/: App.tsx  index.css
docs/src/pages/: ApiDoc.tsx  ConfigDoc.tsx  ConfigMaker.tsx  DevDoc.tsx  Home.tsx
docs/worker/: index.ts
scripts/: build-release-binaries.sh
src/: api.rs  client.rs  config.rs  crypto.rs  db_query.rs  lib.rs  main.rs  proxy_substitute.rs  test_pg.rs
tests/: client_contract.rs
