[package]
name = "simplevault"
version = "0.5.10"
edition = "2024"

[features]
default = []
test-utils = []

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
form_urlencoded = "1.2"
anyhow = "1.0.102"
bytes = "1"
clap = { version = "4.4", features = ["derive"] }
axum = "0.8.8"
hex = "0.4.3"
hmac = "0.12"
rand = "0.10.0"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
async-trait = "0.1"
secrecy = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1.49.0", features = ["full"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
tokio-postgres = { version = "0.7", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-uuid-1",
] }
deadpool-postgres = "0.14"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
uuid = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[dev-dependencies]
postgresql_embedded = { version = "0.20.2", default-features = false, features = [
    "tokio",
    "rustls",
    "zonky",
] }

[[test]]
name = "client_contract"
path = "tests/client_contract.rs"
required-features = ["test-utils"]
